add enable preview to acutally make java 24 work