@@ -8,6 +8,7 @@ version = '1.0'
 
 application {
     mainClass = 'dev.abhay7.skribbl.client.Main'
+    applicationDefaultJvmArgs = ['--enable-preview']
 }
 
 repositories {
@@ -24,6 +25,14 @@ dependencies {
 java {
     sourceCompatibility = JavaVersion.VERSION_24
     targetCompatibility = JavaVersion.VERSION_24
+
+    tasks.withType(JavaCompile).configureEach {
+        options.compilerArgs += '--enable-preview'
+    }
+
+    tasks.withType(Test).configureEach {
+        jvmArgs += '--enable-preview'
+    }
 }
 
 jar {
